hphp/hack/test/typecheck/expression_trees/parse_constants.php.exp
ERROR: File "parse_constants.php", line 8, characters 23-30:
Global constants are not supported in expression trees. (Parsing[1002])
ERROR: File "parse_constants.php", line 8, characters 23-30:
Invalid argument (Typing[4110])
  File "expr_tree.php", line 86, characters 21-26:
  Expected `string`
  File "expr_tree.php", line 197, characters 5-20:
    resulting from expanding the type constant `ExampleDsl::TAst`
  File "parse_constants.php", line 5, characters 7-9:
  But got `int`
